0-reserve/cassandra/k8s/ingress-route-graphql.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cassandra-graphql
  namespace: k8ssandra-operator
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-graphql.cassandra.env0.luojm.com
  routes:
    - match: Host(`graphql.cassandra.env0.luojm.com`) 
      kind: Rule
      services:
      - name: cassandra-cluster-env0-dc1-stargate-service 
        kind: Service
        namespace: k8ssandra-operator
        port: 8080
